syntax = "proto3";

package wallet;

option go_package = "github.com/sapliy/fintech-ecosystem/proto/wallet";

import "google/api/annotations.proto";

service WalletService {
  rpc CreateWallet(CreateWalletRequest) returns (Wallet) {
    option (google.api.http) = {
      post: "/v1/wallets"
      body: "*"
    };
  }
  rpc GetWallet(GetWalletRequest) returns (Wallet) {
    option (google.api.http) = {
      get: "/v1/wallets/{user_id}"
    };
  }
  rpc TopUp(TopUpRequest) returns (TransactionResponse) {
    option (google.api.http) = {
      post: "/v1/wallets/top-up"
      body: "*"
    };
  }
  rpc Transfer(TransferRequest) returns (TransactionResponse) {
    option (google.api.http) = {
      post: "/v1/wallets/transfer"
      body: "*"
    };
  }
}

message Wallet {
  string id = 1;
  string user_id = 2;
  int64 balance = 3;
  string currency = 4;
}

message CreateWalletRequest {
  string user_id = 1;
  string currency = 2;
}

message GetWalletRequest {
  string user_id = 1;
}

message TopUpRequest {
  string user_id = 1;
  int64 amount = 2;
  string currency = 3;
  string reference_id = 4;
}

message TransferRequest {
  string from_user_id = 1;
  string to_user_id = 2;
  int64 amount = 3;
  string currency = 4;
  string reference_id = 5;
}

message TransactionResponse {
  string transaction_id = 1;
  string status = 2;
}
